compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__assert__mismatched_types.snap
---
source: compiler-core/src/type_/tests/assert.rs
expression: assert 10
---
----- SOURCE CODE
assert 10

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:8
  │
1 │ assert 10
  │        ^^

Expected type:

    Bool

Found type:

    Int
